# kakuyomu-cli

./: README.md  cspell.yml  pyproject.toml
.github/workflows/: pip-release.yml
src/kakuyomu/: logger.py  settings.py  types.py
src/kakuyomu/cli/: kakuyomu.py  main.py
src/kakuyomu/cli/commands/: episode.py  kakuyomu.py  work.py
src/kakuyomu/client/: __init__.py  client.py  decorators.py  request_models.py  toc.py  web.py
src/kakuyomu/scrapers/: episode_page.py  my.py  my_page.py  private_page.py  work_page.py
src/kakuyomu/settings/: __init__.py  const.py  login.py  utils.py  work.py
src/kakuyomu/types/: __init__.py  episode_query.py  errors.py  work.py
src/kakuyomu/types/work/: episode.py
src/kakuyomu/utils/: web.py
tests/: conftest.py  helper.py  test_login.py
tests/episode_exists/: conftest.py  helper.py  test_login.py  test_work.py
tests/general/: conftest.py  test_episode.py  test_initialize.py  test_login.py  test_work.py
tests/helper/: __init__.py  classes.py  functions.py
tests/scraper/: private.html  test_private_scraper.py
tests/settings/: test_login.py
tests/testdata/episodes_exists/publish/: 001.txt
tests/testdata/no_work_toml/: kakuyomu_cookie
tests/types/: episode.py  test_work.py
