[project]
name = "kakuyomu"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "kokardy", email = "mgc1028@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "pydantic>=2.5.3",
    "coloredlogs>=15.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"
[project.scripts]
kakuyomu = "kakuyomu.cli.kakuyomu:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.3",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "black>=23.12.1",
    "isort>=5.13.2",
    "coloredlog>=0.2.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "D"]
ignore = [
  "D400", # docstring first line must end with period
  "D415", # docstring first line must end with period, ? , !
]

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "[%(asctime)s] %(levelname)s %(message)s"

[tool.pyright]
reportGeneralTypeIssues = false
extraPaths = ["src", ".venv/lib/python3.12/site-packages"]

[tool.rye.scripts]
test = "pytest -s"
